<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/album_color_e1e0de">

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/color_424342"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="11dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/album_back_normal"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/iv_back"
                android:text="返回"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/album_photo"
            android:textColor="#fff"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:text="@string/album_album_old"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_fefdfe">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_d7d8d7" />

        <TextView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/album_preview"
            android:textColor="@color/color_565756"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:text="@string/album_finish"
            android:textColor="@color/color_565756"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="26dip"
                android:layout_height="26dip"
                android:layout_marginLeft="5dip"
                android:background="@mipmap/album_original_def">

                <CheckBox
                    android:id="@+id/cb_original"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="26dip"
                    android:layout_height="26dip" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:text="@string/album_original"
                android:textColor="@color/color_565756"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/headview"
        android:layout_centerInParent="true">

        <GridView
            android:id="@+id/myGrid"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1.5dp"
            android:background="@color/album_color_e1e0de"
            android:horizontalSpacing="@dimen/album_photo_spacing"
            android:numColumns="3"
            android:paddingLeft="@dimen/album_photo_spacing"
            android:paddingRight="@dimen/album_photo_spacing"
            android:verticalSpacing="@dimen/album_photo_spacing" />

        <TextView
            android:id="@+id/myText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/album_no_photo"
            android:textColor="@color/album_black" />

        <View
            android:id="@+id/album_list_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/album_shape_image_bg"
            android:visibility="gone" />

        <ListView
            android:id="@+id/album_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="72dip"
            android:background="@color/white"
            android:divider="@drawable/album_shape_divider"
            android:dividerHeight="1px"
            android:visibility="gone" />
    </FrameLayout>

</RelativeLayout>