<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="25dp"
    android:background="@color/transparent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/mtl_alert_background"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/mtl_plugin_update_dialog_title"
            android:fontFamily="sans-serif-regular"
            android:background="@color/transparent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16dp"
            android:background="@color/transparent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-regular"
            android:scrollbars="vertical"
            android:textColor="#000000"
            android:text="@string/mtl_plugin_update_dialog_message"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/update_ignore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_gravity="left" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtl_plugin_update_dialog_ignore"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1px"
            android:background="#dcdcdc"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18dp"
                android:text="取消"
                android:fontFamily="sans-serif-regular"
                android:background="@color/transparent"
                android:textColor="#3A80FC"
                />
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#dcdcdc"/>
            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18dp"
                android:text="确认"
                android:fontFamily="sans-serif-regular"
                android:background="@color/transparent"
                android:textColor="#3A80FC"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>